--- a/Page-2.html
+++ b/Page-2.html
@@ -40,6 +40,7 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;">Page 1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Page-2.html" style="padding: 10px 20px;">Page 2</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="tyty.html" style="padding: 10px 20px;">tyty</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="dashboard.html" style="padding: 10px 20px;">dashboard</a>
 </li></ul>
           </div>
           <div class="u-nav-container-collapse">
@@ -49,6 +50,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Page 1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-2.html">Page 2</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="tyty.html">tyty</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="dashboard.html">dashboard</a>
 </li></ul>
               </div>
             </div>
