--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               </div>
               <div class="u-align-center u-container-align-center u-container-style u-layout-cell u-size-17-xl u-size-20-lg u-size-60-md u-size-60-sm u-size-60-xs u-white u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <a href="Page-2.html" data-page-id="808714734" class="u-active-black u-border-none u-btn u-button-style u-custom-color-7 u-hover-black u-btn-1">JOIN NOW </a>
+                  <a href="https://verlux.us.auth0.com/authorize? response_type=code&amp; client_id=sFNhuPC2CDgTMMPHrhXyvHQQ23ITLRaa&amp; redirect_uri=https://verlux.online/dashboad.html&amp; scope=openid%20email%20profile" class="u-active-black u-border-none u-btn u-button-style u-custom-color-7 u-hover-black u-btn-1" target="_blank">JOIN NOW </a>
                 </div>
               </div>
             </div>
