--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       </div>
     </section>
     <section class="u-clearfix u-palette-1-light-3 u-section-4" id="carousel_cbab">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -200,6 +200,25 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
+          <title></title>
+          <style> .auth0-button {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+      background-color: #0056d2;
+      border: none;
+      border-radius: 5px;
+      text-align: center;
+      cursor: pointer;
+    }
+    .auth0-button:hover {
+      background-color: #003e99;
+    } </style>
+          <button class="auth0-button" onclick="window.location.href='https://verlux.us.auth0.com/authorize?response_type=code&amp;client_id=sFNhuPC2CDgTMMPHrhXyvHQQ23ITLRaa&amp;redirect_uri=https://verlux.online/dashboad.html&amp;scope=openid%20email%20profile';"> Login / Sign Up </button>
         </div>
       </div>
     </section>
