--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Page 1">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Page-1.html" data-home-page-title="Page 1" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-gradient u-header u-header" id="sec-933b" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Page-1.html" data-home-page-title="Page 1" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-gradient u-header u-header" id="sec-933b" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
           <img src="images/VERLUX1.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -163,7 +163,7 @@
       </div>
     </section>
     <section class="u-clearfix u-palette-1-light-3 u-section-4" id="carousel_cbab">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -174,8 +174,8 @@
                   <p class="u-large-text u-text u-text-custom-color-5 u-text-variant u-text-2">"Connect with like-minded traders, share insights, and grow together. Join now to gain access to exclusive signals, strategies, and expert guidance!.</p>
                 </div>
               </div>
-              <div class="u-align-center u-container-align-center u-container-style u-layout-cell u-size-17 u-white u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-2">
+              <div class="u-align-center u-container-align-center u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-container-style u-layout-cell u-size-17 u-white u-layout-cell-2">
+                <div class="u-container-layout u-container-layout-2">
                   <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
                     <title></title>
                     <style> .auth0-button {
@@ -195,6 +195,7 @@
     } </style>
                     <button class="auth0-button" onclick="window.location.href='https://verlux.us.auth0.com/authorize?response_type=code&amp;client_id=sFNhuPC2CDgTMMPHrhXyvHQQ23ITLRaa&amp;redirect_uri=https://gxdltag.github.io/verlux-signals/&amp;scope=openid%20email%20profile';"> Login / Sign Up </button>
                   </div>
+                  <a href="learn.html" data-page-id="1305528674" class="u-btn u-btn-round u-button-style u-custom-color-2 u-hover-palette-1-light-1 u-radius u-btn-1">learn how to trade </a>
                 </div>
               </div>
             </div>
