--- a/Terms-and-conditions.html
+++ b/Terms-and-conditions.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Terms and conditions">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-gradient u-header u-header" id="sec-933b" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-gradient u-header u-header" id="sec-933b" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
           <img src="images/VERLUX1.png" class="u-logo-image u-logo-image-1">
         </a>
